--- a/configuration.yaml
+++ b/configuration.yaml
@@ -65,6 +65,12 @@ zwave:
       refresh_value: true
       delay: 5
 
+#####################################################################
+### ZIGBEE CONFIG
+#####################################################################
+
+
+
 
 #####################################################################
 ### HTTP CONFIG
@@ -144,7 +150,7 @@ updater:
 sun:
 conversation:
 frontend:
-discovery:
+#discovery:
 config:
 
 #####################################################################
