--- a/device_trackers.yaml
+++ b/device_trackers.yaml
@@ -1,25 +1,7 @@
-### Netgear
-- platform: netgear
+## DD-WRT
+- platform: ddwrt
   host: !secret router_ip
-  port: 80
-  username: !secret netgear_user
-  password: !secret netgear_pass
+  username: !secret router_user
+  password: !secret router_pass
   track_new_devices: no
-
-### Retired in favor of iOS app
-### OwnTracks
-#- platform: owntracks
-#  max_gps_accuracy: 200
-#  waypoints: True
-#  waypoint_whitelist:
-#    - rick
-#    - megs
-
-### iCloud
-#- platform: icloud
-#  account_name: rick
-#  username: !secret icloud_rick
-#  password: !secret icloud_rick_password
-### Time to wait until marking someone as "not home" after not being seen (default: 180)
-#  consider_home: 00:20:00
-#  track_new_devices: no
+  consider_home: 180
