--- a/lights.yaml
+++ b/lights.yaml
@@ -1,8 +1,10 @@
 - platform: flux_led
   automatic_add: true
   devices:
+#    192.168.11.113:
     192.168.10.37:
       name: flux_rgb
+      mode: rgb
 
     192.168.10.39:
       name: under_bed_lights
